# Photon

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
examples/: CMakeLists.txt  example.c
examples/shaders/: triangle.slang
include/photon/: photon.h  photon_device.h  photon_error.h  photon_instance.h  photon_log.h  photon_mesh.h  photon_pipeline.h  photon_shader.h  photon_status.h  photon_ubo.h  photon_window.h
src/: ph_internal.h  photon_device.c  photon_device_internal.h  photon_instance.c  photon_instance_internal.h  photon_internal.h  photon_log.c  photon_mesh.c  photon_pipeline.c  photon_shader.c  photon_status.c  photon_ubo.c  photon_window.c  photon_window_internal.h
